--- a/Thực hành Lớp và Đối tượng - Nhiệm vụ 1.ipynb
+++ b/Thực hành Lớp và Đối tượng - Nhiệm vụ 1.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "d62e2a1f",
    "metadata": {},
    "outputs": [],
@@ -39,19 +39,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "d472c3bd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tử số là 1\n",
-      "Mẫu số là 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = PhanSo()"
    ]
@@ -67,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "c2dbabbd",
    "metadata": {},
    "outputs": [],
@@ -80,19 +71,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "d1a0b5a9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tử số là 5\n",
-      "Mẫu số là 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = PhanSo(5, 3)  # tạo ra phân số 5/3\n",
     "print(f'Tử số là {a.tu_so}')  # in ra tử số\n",
@@ -118,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "0d17097d",
    "metadata": {},
    "outputs": [],
@@ -130,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "bbf33719",
    "metadata": {},
    "outputs": [],
@@ -148,21 +130,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "8ef130b7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'<__main__.Student object at 0x000001907E9E3730>'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "str(student)"
    ]
@@ -177,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "2e6027d1",
    "metadata": {},
    "outputs": [],
@@ -200,21 +171,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "2d45f909",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Hi! My name is Micheal'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "student = Student()\n",
     "str(student)"
@@ -235,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "8869b2df",
    "metadata": {},
    "outputs": [],
@@ -250,19 +210,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "a76babcb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tử số là: 5\n",
-      "Mẫu số là: 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = PhanSo(5, 3)  # tạo ra phân số 5/3\n",
     "print(str(a))"
@@ -299,15 +250,15 @@
    "outputs": [],
    "source": [
     "class PhanSo:\n",
-    "    def __init__(self, ...parameter...):\n",
-    "        pass\n",
-    "    \n",
+    "    def __init__(self, tu_so, mau_so):\n",
+    "        self.tu_so = tu_so\n",
+    "        self.mau_so = mau_so\n",
     "    def __str__(self):\n",
-    "        pass\n",
-    "    \n",
+    "        return f'Tử số là: {self.tu_so}\\nMẫu số là: {self.mau_so}' \n",
     "    def multiply(self, other):\n",
-    "        # code here\n",
-    "        return PhanSo(1, 1)"
+    "        tu_so_moi = self.tu_so * other.tu_so\n",
+    "        mau_so_moi = self.mau_so * other.mau_so\n",
+    "        return PhanSo(tu_so_moi,mau_so_moi)"
    ]
   },
   {
@@ -344,28 +295,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b38dbc1f",
    "metadata": {},
    "outputs": [],
    "source": [
     "class PhanSo:\n",
-    "    def __init__(self, ...parameter...):\n",
-    "        pass\n",
-    "    \n",
+    "    def __init__(self, tu_so, mau_so):\n",
+    "        self.tu_so = tu_so\n",
+    "        self.mau_so = mau_so\n",
     "    def __str__(self):\n",
-    "        pass\n",
-    "    \n",
+    "        return f'Tử số là: {self.tu_so}\\nMẫu số là: {self.mau_so}' \n",
     "    def multiply(self, other):\n",
-    "        pass"
+    "        tu_so_moi = self.tu_so * other.tu_so\n",
+    "        mau_so_moi = self.mau_so * other.mau_so\n",
+    "        return PhanSo(tu_so_moi,mau_so_moi)\n",
+    "    def divide(self, other):\n",
+    "        tu_so_moi = self.tu_so * other.mau_so\n",
+    "        mau_so_moi = self.mau_so * other.tu_so\n",
+    "        return PhanSo(tu_so_moi, mau_so_moi)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "34eff270",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tử số là: 80\n",
+      "Mẫu số là: 75\n"
+     ]
+    }
+   ],
    "source": [
     "a = PhanSo(4, 5)\n",
     "b = PhanSo(15, 20)\n",
@@ -394,31 +359,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "31e896d3",
    "metadata": {},
    "outputs": [],
    "source": [
     "class PhanSo:\n",
-    "    def __init__(self, ...parameter...):\n",
-    "        pass\n",
-    "    \n",
+    "    def __init__(self, tu_so, mau_so):\n",
+    "        self.tu_so = tu_so\n",
+    "        self.mau_so = mau_so\n",
     "    def __str__(self):\n",
-    "        pass\n",
-    "    \n",
+    "        return f'Tử số là: {self.tu_so}\\nMẫu số là: {self.mau_so}' \n",
     "    def multiply(self, other):\n",
-    "        pass\n",
-    "    \n",
+    "        tu_so_moi = self.tu_so * other.tu_so\n",
+    "        mau_so_moi = self.mau_so * other.mau_so\n",
+    "        return PhanSo(tu_so_moi,mau_so_moi)\n",
     "    def divide(self, other):\n",
-    "        pass"
+    "        tu_so_moi = self.tu_so * other.mau_so\n",
+    "        mau_so_moi = self.mau_so * other.tu_so\n",
+    "        return PhanSo(tu_so_moi, mau_so_moi)\n",
+    "    def add(self, other):\n",
+    "        tu_so_moi = self.tu_so * other.mau_so + self.mau_so * other.tu_so\n",
+    "        mau_so_moi = self.mau_so * other.mau_so\n",
+    "        return PhanSo(tu_so_moi, mau_so_moi)\n",
+    "    def subtract(self, other):\n",
+    "        tu_so_moi = self.tu_so * other.mau_so - self.mau_so * other.tu_so\n",
+    "        mau_so_moi = self.mau_so * other.mau_so\n",
+    "        return PhanSo(tu_so_moi, mau_so_moi)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "90a4338f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tử số là: 60\n",
+      "Mẫu số là: 36\n",
+      "Tử số là: -12\n",
+      "Mẫu số là: 36\n"
+     ]
+    }
+   ],
    "source": [
     "a = PhanSo(4, 6)\n",
     "b = PhanSo(6, 6)\n",
@@ -455,31 +441,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "fc04485c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import math\n",
     "class PhanSo:\n",
-    "    def __init__(self, ...parameter...):\n",
-    "        pass\n",
-    "    \n",
+    "    def __init__(self, tu_so, mau_so):\n",
+    "        self.tu_so = tu_so\n",
+    "        self.mau_so = mau_so\n",
     "    def __str__(self):\n",
-    "        pass\n",
-    "    \n",
+    "        return f'Tử số là: {self.tu_so}\\nMẫu số là: {self.mau_so}' \n",
     "    def multiply(self, other):\n",
-    "        pass\n",
-    "    \n",
+    "        tu_so_moi = self.tu_so * other.tu_so\n",
+    "        mau_so_moi = self.mau_so * other.mau_so\n",
+    "        return PhanSo(tu_so_moi,mau_so_moi)\n",
     "    def divide(self, other):\n",
-    "        pass"
+    "        tu_so_moi = self.tu_so * other.mau_so\n",
+    "        mau_so_moi = self.mau_so * other.tu_so\n",
+    "        return PhanSo(tu_so_moi, mau_so_moi)\n",
+    "    def add(self, other):\n",
+    "        tu_so_moi = self.tu_so * other.mau_so + self.mau_so * other.tu_so\n",
+    "        mau_so_moi = self.mau_so * other.mau_so\n",
+    "        return PhanSo(tu_so_moi, mau_so_moi)\n",
+    "    def subtract(self, other):\n",
+    "        tu_so_moi = self.tu_so * other.mau_so - self.mau_so * other.tu_so\n",
+    "        mau_so_moi = self.mau_so * other.mau_so\n",
+    "        return PhanSo(tu_so_moi, mau_so_moi)\n",
+    "    def minimalize(self):\n",
+    "        ucln = math.gcd(self.tu_so, self.mau_so)\n",
+    "        self.tu_so //= ucln\n",
+    "        self.mau_so //= ucln"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "fed96b48",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tử số là: 60\n",
+      "Mẫu số là: 36\n",
+      "Tử số là: 5\n",
+      "Mẫu số là: 3\n"
+     ]
+    }
+   ],
    "source": [
     "a = PhanSo(4, 6)\n",
     "b = PhanSo(6, 6)\n",
